// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input disabled 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 6px;
  color: neutralGray5;
  font-family: Nunito Sans;
  font-weight: 400;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-weight: 400;
  border: none;
  box-shadow: none;
  font-family: primary;
  display: block;
  padding-left: 7px;
  outline: none;
}

@media screen and (min-width:40em) {

}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <input
      className="c2"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="text"
    />
  </div>
</div>
`;

exports[`Input placeholder 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 6px;
  color: #6F838D;
  font-family: Nunito Sans;
  font-weight: 400;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-weight: 400;
  border: none;
  box-shadow: none;
  font-family: primary;
  display: block;
  padding-left: 7px;
  outline: none;
}

@media screen and (min-width:40em) {

}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <input
      className="c2"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      placeholder="test"
      type="text"
    />
  </div>
</div>
`;

exports[`Input renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 6px;
  color: #6F838D;
  font-family: Nunito Sans;
  font-weight: 400;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-weight: 400;
  border: none;
  box-shadow: none;
  font-family: primary;
  display: block;
  padding-left: 7px;
  outline: none;
}

@media screen and (min-width:40em) {

}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <input
      className="c2"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="text"
    />
  </div>
</div>
`;
